# regex-applicative-foldl

./: .gitignore  ChangeLog.md  README.md  cabal.project  cabal.project.freeze  package.yaml  regex-applicative-foldl.cabal  stack.yaml
src/Text/Regex/Applicative/: Foldl.hs
